Comments. Veel comments

--- a/ComeniusCarrousel/Admin/Decaan/DecaanOverzicht.cshtml
+++ b/ComeniusCarrousel/Admin/Decaan/DecaanOverzicht.cshtml
@@ -1,4 +1,10 @@
-﻿@{
+﻿@*
+    Permissies: Admin
+    Te berijken van: _Layout
+    Linkt door naar: Admin/Decaan/DecaanToevoegen, Admin/Decaan/DecaanWijzigen?id=[ID]
+    Beschrijving: Geeft een overzicht van alle decanen
+*@
+@{
     Layout = "~/_Layout.cshtml";
     Page.Title = "Decaan overzicht";
 
