--- a/ComeniusCarrousel/Admin/Decaan/DecaanWijzigen.cshtml
+++ b/ComeniusCarrousel/Admin/Decaan/DecaanWijzigen.cshtml
@@ -1,4 +1,10 @@
-﻿@{
+﻿@*
+    Permissies: Admin
+    Te berijken van: Admin/Decaan/DecaanOverzicht
+    Linkt door naar: Admin/Decaan/DecaanOverzicht
+    Beschrijving: Verwijdert een decaan
+*@
+@{
     Layout = "~/_Layout.cshtml";
     Page.Title = "Decaan wijzigen";
 
