--- a/ComeniusCarrousel/Admin/Leerling/LeerlingWijzigen.cshtml
+++ b/ComeniusCarrousel/Admin/Leerling/LeerlingWijzigen.cshtml
@@ -1,4 +1,10 @@
-﻿@{
+﻿@*
+    Permissies: Admin
+    Te berijken van: Default(Decaan/_Decaan)
+    Linkt door naar: Default
+    Beschrijving: Verwijdert een leerling
+*@
+@{
     Layout = "~/_Layout.cshtml";
     Page.Title = "Leerling wijzigen";
 
