--- a/ComeniusCarrousel/Decaan/Klas/KlasOverzicht.cshtml
+++ b/ComeniusCarrousel/Decaan/Klas/KlasOverzicht.cshtml
@@ -1,4 +1,10 @@
-﻿@{
+﻿@*
+    Permissies: Admin, Decaan(gedeeltelijk)
+    Te berijken van: _Layout
+    Linkt door naar: [Alleen admin]: Decaan/Klas/KlasToevoegen, Decaan/Klas/KlasWijzigen?id=[ID]
+    Beschrijving: Geeft een overzicht van alle klassen
+*@
+@{
     Layout = "~/_Layout.cshtml";
     Page.Title = "Klas overzicht";
 
