--- a/ComeniusCarrousel/Decaan/Klas/KlasWijzigen.cshtml
+++ b/ComeniusCarrousel/Decaan/Klas/KlasWijzigen.cshtml
@@ -1,4 +1,10 @@
-﻿@{
+﻿@*
+    Permissies: Admin
+    Te berijken van: Decaan/Klas/KlasOverzicht
+    Linkt door naar: Decaan/Klas/KlasOverzicht
+    Beschrijving: Verwijdert een klas en alle leerlingen er in
+*@
+@{
     Layout = "~/_Layout.cshtml";
     Page.Title = "Klas wijzigen";
 
