--- a/ComeniusCarrousel/Decaan/Leraar/LeraarOverzicht.cshtml
+++ b/ComeniusCarrousel/Decaan/Leraar/LeraarOverzicht.cshtml
@@ -1,4 +1,10 @@
-﻿@{
+﻿@*
+    Permissies: Admin, Decaan
+    Te berijken van: _Layout
+    Linkt door naar: Decaan/Leraar/LeraarToevoegen, Decaan/Leraar/LeraarWijzigen?id=[ID]
+    Beschrijving: Geeft een overzicht van alle leraren
+*@
+@{
     Layout = "~/_Layout.cshtml";
     Page.Title = "Leraar overzicht";
 
