--- a/ComeniusCarrousel/Decaan/Leraar/LeraarWijzigen.cshtml
+++ b/ComeniusCarrousel/Decaan/Leraar/LeraarWijzigen.cshtml
@@ -1,4 +1,10 @@
-﻿@{
+﻿@*
+    Permissies: Admin, Decaan
+    Te berijken van: Decaan/Leraar/LeraarOverzicht
+    Linkt door naar: Decaan/Leraar/LeraarOverzicht
+    Beschrijving: Verwijdert een leraar
+*@
+@{
     Layout = "~/_Layout.cshtml";
     Page.Title = "Leraar wijzigen";
 
