--- a/ComeniusCarrousel/Decaan/Lokaal/LokaalOverzicht.cshtml
+++ b/ComeniusCarrousel/Decaan/Lokaal/LokaalOverzicht.cshtml
@@ -1,4 +1,10 @@
-﻿@{
+﻿@*
+    Permissies: Admin, Decaan
+    Te berijken van: _Layout
+    Linkt door naar: Decaan/Lokaal/LokaalToevoegen, Decaan/Lokaal/LokaalWijzigen?id=[ID]
+    Beschrijving: Geeft een overzicht van alle lokalen
+*@
+@{
     Layout = "~/_Layout.cshtml";
     Page.Title = "Lokaal overzicht";
 
