--- a/ComeniusCarrousel/Decaan/Lokaal/LokaalWijzigen.cshtml
+++ b/ComeniusCarrousel/Decaan/Lokaal/LokaalWijzigen.cshtml
@@ -1,4 +1,10 @@
-﻿@{
+﻿@*
+    Permissies: Admin, Decaan
+    Te berijken van: Decaan/Lokaal/LokaalOverzicht
+    Linkt door naar: Decaan/Lokaal/LokaalOverzicht
+    Beschrijving: Verwijdert een lokaal
+*@
+@{
     Layout = "~/_Layout.cshtml";
     Page.Title = "Lokaal wijzigen";
 
