--- a/ComeniusCarrousel/Decaan/Vak/VakOverzicht.cshtml
+++ b/ComeniusCarrousel/Decaan/Vak/VakOverzicht.cshtml
@@ -1,4 +1,10 @@
-﻿@{
+﻿@*
+    Permissies: Admin, Decaan
+    Te berijken van: _Layout
+    Linkt door naar: Decaan/Vak/VakToevoegen, Decaan/Vak/VakWijzigen?id=[ID]
+    Beschrijving: Geeft een overzicht van alle vakken
+*@
+@{
     Layout = "~/_Layout.cshtml";
     Page.Title = "Vak overzicht";
 
