--- a/ComeniusCarrousel/Decaan/Vak/VakWijzigen.cshtml
+++ b/ComeniusCarrousel/Decaan/Vak/VakWijzigen.cshtml
@@ -1,4 +1,10 @@
-﻿@{
+﻿@*
+    Permissies: Admin, Decaan
+    Te berijken van: Decaan/Vak/VakOverzicht
+    Linkt door naar: Decaan/Vak/VakOverzicht
+    Beschrijving: Verwijdert een vak
+*@
+@{
     Layout = "~/_Layout.cshtml";
     Page.Title = "Vak wijzigen";
 
