--- a/ComeniusCarrousel/Leerling/EigenRooster.cshtml
+++ b/ComeniusCarrousel/Leerling/EigenRooster.cshtml
@@ -1,4 +1,10 @@
-﻿@{
+﻿@*
+    Permissies: Leerling
+    Te berijken van: Default(Leerling/_Leerling)
+    Linkt door naar: ~
+    Beschrijving: Geeft alle rooster punten van een leerling
+*@
+@{
     Page.Title= "Rooster";
     Layout = "~/_Layout.cshtml";
 
