--- a/ComeniusCarrousel/Leerling/Keuze.cshtml
+++ b/ComeniusCarrousel/Leerling/Keuze.cshtml
@@ -1,4 +1,11 @@
-﻿@{
+﻿@*
+    Permissies: Leerling
+    Te berijken van: Default(Leerling/_Leerling)
+    Linkt door naar: Default
+    Beschrijving: Vraagt om een aantal vakken met bij elk het aantal personen dat de leerling mee wil 
+        nemen naar de voorlichting en voegt deze gegevens in de database
+*@
+@{
     Page.Title= "Keuze";
     Layout = "~/_Layout.cshtml";
 
