--- a/ComeniusCarrousel/Leraar/_Leraar.cshtml
+++ b/ComeniusCarrousel/Leraar/_Leraar.cshtml
@@ -1,4 +1,9 @@
-﻿@*Wordt aangeroepen in default*@
+﻿@*
+    Permissies: Leraar
+    Wordt aangeroepen in: Default
+    Linkt door naar: Rooster
+    Beschrijving: Hoofd pagina van leraar. Geeft een leraar zijn gegevens
+*@
 @{
     if (!User.IsInRole("Leraar"))
     {
