--- a/ComeniusCarrousel/Rooster.cshtml
+++ b/ComeniusCarrousel/Rooster.cshtml
@@ -1,4 +1,10 @@
-﻿@{
+﻿@*
+    Permissies: Admin, Decaan, Leraar
+    Te berijken van: [Alleen Leraar]: Default(Leraar/_Leraar), [Alleen Admin, Decaan]: Default(Decaan/_Decaan)
+    Linkt door naar: ~
+    Beschrijving: Volledig rooster met alle voorlichtingen en leerlingen die hiervoor aangemeld zijn
+*@
+@{
     Page.Title= "Rooster";
     Layout = "~/_Layout.cshtml";
 
