--- a/ComeniusCarrousel/_AboutDetails.cshtml
+++ b/ComeniusCarrousel/_AboutDetails.cshtml
@@ -1,4 +1,9 @@
-﻿@*Wordt aangeroepen in About en Default*@
+﻿@*
+    Permissies: ~
+    Wordt aangeroepen in: About, [Alleen oningelogd]: Default
+    Linkt door naar: ~
+    Beschrijving: Een kleine beschrijving van de site
+*@
 @{
     
 }
