--- a/ComeniusCarrousel/_Layout.cshtml
+++ b/ComeniusCarrousel/_Layout.cshtml
@@ -1,4 +1,14 @@
-﻿@*Wordt standaard zo goed als overal aangeroepen*@
+﻿@*
+    Permissies: ~
+    Wordt aangeroepen in: Alles
+    Linkt door naar: Default, 
+                     [Alleen oningelogd]: User_Management/Login, About, 
+                     [Alleen ingelogd]: User_Management/Logout, User_Management/Manage
+                     [Alleen admin]: Admin/Decaan/DecaanOverzicht,
+                     [Alleen admin/decaan]: Decaan/Lokaal/LokaalOverzicht, Decaan/Vak/VakOverzicht, Decaan/Leraar/LeraarOverzicht, 
+                         Decaan/Voorlichting/VoorlichtingOverzicht, Decaan/Mail/MailOverzicht, Decaan/Klas/KlasOverzicht
+    Beschrijving: Layout en vormgeving
+*@
 @{
     //Hier wordt gecontroleerd welke pagina actief is en verandert de variabelen; dit wordt later weer aangeroepen
     string dropdownOverzichtActive = "";
