--- a/ComeniusCarrousel/About.cshtml
+++ b/ComeniusCarrousel/About.cshtml
@@ -1,4 +1,11 @@
-﻿@{
+﻿@*
+    Permissies: ~
+    Te berijken van: _Layout
+    Roept aan: Leerling/_LeerlingDetails
+    Linkt door naar: ~
+    Beschrijving: Een kleine beschrijving van de site
+*@
+@{
     Page.Title= "About";
     Layout = "~/_Layout.cshtml";
 }
