--- a/ComeniusCarrousel/App_Code/GebruikerRepo.cshtml
+++ b/ComeniusCarrousel/App_Code/GebruikerRepo.cshtml
@@ -1,4 +1,5 @@
 ﻿@functions{
+    // class representatie van de dabatase tabel Gebruiker en base class van Leerling en Leraar
     public class Gebruiker
     {
         private const string table = "Gebruiker";
@@ -17,6 +18,7 @@
             this.achternaam = achternaam;
         }
 
+        // geeft een gebruiker terug die de gegeven id matcht
         public static Gebruiker GetGebruiker(int id)
         {
             var db = Database.Open(App.DataBase);
