--- a/ComeniusCarrousel/App_Code/LeraarRepo.cshtml
+++ b/ComeniusCarrousel/App_Code/LeraarRepo.cshtml
@@ -1,4 +1,5 @@
 ﻿@functions{
+    // class representatie van de database tabel Leraar. Inherit van Gebruiker
     public class Leraar : GebruikerRepo.Gebruiker
     {
         private const string table = "Leraar";
@@ -21,6 +22,7 @@
         }
     }
 
+    // geeft een leerling terug die de gegeven id matcht
     public static Leraar GetLeraar(int id)
     {
         var db = Database.Open(App.DataBase);
@@ -41,6 +43,7 @@
         return null;
     }
 
+    // Geeft een lijst terug met alle decanen
     public static List<Leraar> GetLeraren()
     {
         List<Leraar> leraren = new List<Leraar>();
@@ -59,6 +62,8 @@
         db.Close();
         return null;
     }
+
+    // delete een leraar en alle children (mailOntvanger, voorlichting) uit de database die de gegeven userId en userName matcht
     public static void DeleteLeraar(int id, string user)
     {
         var db = Database.Open(App.DataBase);
@@ -85,6 +90,7 @@
         userDb.Close();
     }
 
+    // voegt een leraar toe aan de database met alle gegeven argumenten
     public static void MakeLeraar(string userName, string password, string voornaam, string achternaam, string vak)
     {
         var db = Database.Open(App.AuthDataBase);
