--- a/ComeniusCarrousel/App_Code/MailRepo.cshtml
+++ b/ComeniusCarrousel/App_Code/MailRepo.cshtml
@@ -1,4 +1,5 @@
 ﻿@functions{
+    // class representatie van de database tabel Mail.
     public class Mail
     {
         private const string table = "Mail";
@@ -35,6 +36,7 @@
         }
     }
 
+    // Geeft een lijst terug met alle mails
     public static List<Mail> GetMails()
     {
         List<Mail> mails = new List<Mail>();
@@ -48,6 +50,7 @@
         return mails;
     }
 
+    // geeft een mail terug die de gegeven id matcht
     public static Mail GetMail(int id)
     {
         var db = Database.Open(App.DataBase);
@@ -61,7 +64,8 @@
         db.Close();
         return null;
     }
-
+    
+    // voegt een mail toe aan de database met inhoud en onderwerp
     public static void MakeMail(string inhoud, string onderwerp)
     {
         var db = Database.Open(App.DataBase);
@@ -70,6 +74,7 @@
         db.Close();
     }
 
+    // delete een mail en alle children (mailOntvanger) uit de database die de gegeven id matcht
     public static void DeleteMail(int id)
     {
         var db = Database.Open(App.DataBase);
