--- a/ComeniusCarrousel/App_Code/VoorlichtingRepo.cshtml
+++ b/ComeniusCarrousel/App_Code/VoorlichtingRepo.cshtml
@@ -1,4 +1,5 @@
 ﻿@functions{
+    // class representatie van de database tabel Voorlichting
     public class Voorlichting
     {
         private const string table = "Voorlichting";
@@ -32,6 +33,8 @@
                 Repository.CRUD.doSimpleIdUpdate(table, "VakId", Convert.ToString(value), idName, voorlichtingId);
             }
         }
+
+        // geeft de vakNaam bijbehorend aan de vakId van de voorlichting
         public string Vak
         {
             get
@@ -54,6 +57,8 @@
                 Repository.CRUD.doSimpleIdUpdate(table, "UserId", Convert.ToString(value), idName, voorlichtingId);
             }
         }
+
+        // geeft de volledige naam bijbehorend aan de userId(leraar) van de voorlichting
         public string Leraar
         {
             get
@@ -71,11 +76,13 @@
         }
         public int LokaalId
         {
-            get{return userId;}
+            get{return lokaalId;}
             set{
                 Repository.CRUD.doSimpleIdUpdate(table, "LokaalId", Convert.ToString(value), idName, voorlichtingId);
             }
         }
+
+        // geeft de lokaalNaam bijbehorend aan de lokaalId van de voorlichting
         public string Lokaal
         {
             get
@@ -107,6 +114,7 @@
         }
     }
 
+    // geeft alle voorlichtingen uit de database terug
     public static List<Voorlichting> GetVoorlichtingen()
     {
         List<Voorlichting> voorlichtingen = new List<Voorlichting>();
@@ -120,6 +128,7 @@
         return voorlichtingen;
     }
 
+    // geeft een voorlichting terug die de gegeven id matcht
     public static Voorlichting GetVoorlichting(int id)
     {
         var db = Database.Open(App.DataBase);
@@ -134,6 +143,7 @@
         return null;
     }
 
+    // geeft alle voorlichtingen terug van een leerling die de gegeven userId matcht
     public static List<Voorlichting> GetStudentRooster(int userId)
     {
         List<Voorlichting> voorlichtingen = new List<Voorlichting>();
@@ -147,6 +157,7 @@
         return voorlichtingen;
     }
 
+    // voegt een voorlichting toe aan de database met alle gegeven argumenten
     public static void MakeVoorlichting(int vakId, int userId, int lokaalId, DateTime dateTime, string niveau)
     {
         var db = Database.Open(App.DataBase);
@@ -155,6 +166,7 @@
         db.Close();
     }
 
+    // delete een vorlichting en alle children (rooster) uit de database die de gegeven id  matcht
     public static void DeleteVoorlichting(int id)
     {
         var db = Database.Open(App.DataBase);
