--- a/ComeniusCarrousel/Decaan/Voorlichting/VoorlichtingOverzicht.cshtml
+++ b/ComeniusCarrousel/Decaan/Voorlichting/VoorlichtingOverzicht.cshtml
@@ -1,4 +1,10 @@
-﻿@{
+﻿@*
+    Permissies: Admin, Decaan
+    Te berijken van: _Layout
+    Linkt door naar: Decaan/Voorlichting/VoorlichtingToevoegen, Decaan/Voorlichting/VoorlichtingWijzigen?id=[ID]
+    Beschrijving: Geeft een overzicht van alle voorlichtingen
+*@
+@{
     Layout = "~/_Layout.cshtml";
     Page.Title = "Voorlichting overzicht";
 
