--- a/ComeniusCarrousel/Decaan/Leraar/LeraarToevoegen.cshtml
+++ b/ComeniusCarrousel/Decaan/Leraar/LeraarToevoegen.cshtml
@@ -55,7 +55,7 @@
     }
 }
 
- - <h2>Nieuwe leraar aanmaken</h2>
+<h2>Nieuwe leraar aanmaken</h2>
 
 <div class="col-md-12">
     <form method="post">
